[package]
name = "guests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "is-even"
path = "src/bin/is_even.rs"

[workspace]

[dependencies]
alloy-primitives = { version = "0.6", default-features = false, features = ["rlp", "serde", "std"] }
alloy-sol-types = { version = "0.6" }
async-h1 = "2.3.2"
async-net = "1.6.0"
smol = "1.2.0"
tiny_http = "0.7"
# reqwest = { version = "0.11", features = ["json"] }
# tokio = { version = "1.35", features = ["full"] }
# serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = "thin"
